--- a/sentencing-eda.Rmd
+++ b/sentencing-eda.Rmd
@@ -65,9 +65,18 @@ There are some confusing data types that use numbers to *represent* categorical 
 
 Can you identify which data type each variable in the federal criminal sentencing data is?
 
-You may notice that some variables' data types are not what you would expect. Oftentimes, R will automatically assign data types to variables in ways you don't want. To deal with this, we can change the data types of variables using two important functions: `mutate()` and `factor()`. 
+You may notice that some variables' data types are not what you would expect. Oftentimes, R will automatically assign data types to variables in ways you don't want.  
 
-Let's take the variable `sex`, for example, which we know has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female". We can see that `sex` is currently classified as a `dbl`, but we want to change that to the `fct` data type. You can think of `mutate()` as being a function that essentially replaces the a column in the data set with a new one. In this case, we are replacing the `sex` variable column that is coded as `dbl`, with a new column of `sex` coded as `fct`. We can use the function `factor()` to specify the two levels of `sex`, 0 and 1, and labeling each level as "Male" and "Female" respectively. Using this process, we are telling R to consider `sex` to be a categorical variable with two levels. 
+Let's take the variable `sex`, for example. Remember that `sex` has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female". We can confirm this using `distinct()`, a function that displays all unique values under a specified column. 
+
+```{r}
+us_sent %>%
+  distinct(sex)
+```
+
+We can also see that `sex` is currently classified as a `dbl` above. Let's change that to the `fct` data type so R recognizes the variable as categorical. To deal with this, we can change the data types of variables using two important functions: `mutate()` and `factor()`.
+
+You can think of `mutate()` as being a function that essentially replaces the a column in the data set with a new one. In this case, we are replacing the `sex` variable column that is coded as `dbl` with a new column for `sex` coded as `fct`. We can use the function `factor()` to specify the two levels of `sex`, 0 and 1, and labeling each level as "Male" and "Female" respectively. Using this process, we are telling R to consider `sex` to be a categorical variable with two levels. 
 
 
 ```{r}
@@ -76,7 +85,14 @@ us_sent <- us_sent %>%
                       labels = c("Male", "Female")))
 ```
 
-We can use this process to change the rest of the variables with incorrect data types. You can see that we don't always need to add labels, just when we think it might be useful. 
+Let's check our work by using `glimpse()` again:
+
+```{r}
+glimpse(us_sent)
+```
+
+
+Great! It worked. `sex` is now of the `fct` data type. Now we can use this process to change the rest of the variables with incorrect data types. You can see that we don't always need to add labels, just when we think it might be useful. 
 
 ```{r}
 us_sent <- us_sent %>% 
@@ -87,18 +103,28 @@ us_sent <- us_sent %>%
          guilty_plea = factor(guilty_plea))
 ```
 
+Now that our variable data types are sorted out, let's change one final component of our data set. Let's change the `other` level under the `race` variable to "ARI", which stands for "another racial identity", to clarify what we mean. To do this, we can use `mutate()` again in combination when `case_when()`, a function that allows you to condition an action on something between true. In this case, we are saying that we only want to change a value to "ARI" *if* `race` equals "other". 
+
+```{r}
+us_sent <- us_sent %>% 
+  mutate(race = case_when(race == "other" ~ "ARI",
+                          TRUE ~ race))
+```
+
+You can use the `View(us_sent)` function again to take a look at all the alterations we made to the dataset. 
+
 Now that we have our data types sorted out, we can start exploring the data!
 
 ## Explorations
 
-A good practice to do with a new data set is to explore it through visualization. We will walk through a few graphs in R so you can see how to plot. We will examine each of these so we can see relationships and learn more about our data. Then, explore on your own by modifying this code!
+A good practice to do with a new data set is to explore it through visualization. We can get a sense of the distributions of the different variables and look at the relationships among different variables. We will walk through a few graphs in R so you can see how to plot. We will examine each of these so we can see relationships and learn more about our data. Then, explore on your own by modifying this code!
 
 
-## How to make a scatter plot with quantitative variables
+### How to make a scatter plot with quantitative variables
 
 In this first plot, we will look at numerical variables only using a scatter plot. Scatter plots help us to visualize and understand numerical data better. We will compare each defendant's age to their sentence length through visualization and observation, and we will use this scatter plot to identify any patterns that exist in our data set. Each dot in the scatter plot we produce with the `ggplot()` command from the **ggplot2** package represents a row in our `us_sent` data. 
 
-To use `ggplot()`, we start by indicating what data set we want to plot, `us_sent`. Then, we sepcify what our variables of interest are--in this case, we are interested in `age` and `sentence_length`. `geom_point()` specifies that we are interested in using a scatter plot to represent our data. There are many fun and useful modifications that change the way a scatter plot looks. For example, you can change the color of data points using `color`, you can change the size of data points using `size`, and you can specify the transparency of data points using `alpha`. It's also good practice to come up with a useful title and good axis labels using the `labs` command.
+To use `ggplot()`, we start by indicating what data set we want to plot, `us_sent`. Then, we specify what our variables of interest are--in this case, we are interested in `age` and `sentence_length`. `geom_point()` specifies that we want to use a scatter plot to represent our data. There are also many fun and useful modifications that change the way a scatter plot looks. For example, you can change the color of data points using `color`, you can change the size of data points using `size`, and you can specify the transparency of data points using `alpha`. It's also good practice to come up with a useful title and good axis labels using the `labs` command.
 
 ```{r sentence length by age, fig.width = 6, fig.height = 6}
 ggplot(us_sent, aes(x = age, 
@@ -113,28 +139,40 @@ ggplot(us_sent, aes(x = age,
 
 What do you notice in this scatter plot? What do you wonder?
 
-## What happens when you try to make a scatter plot with categorical variables?
+### What happens when you try to make a scatter plot with categorical variables?
 
 We just created a scatter plot with two numerical variables. Now we will see what happens if one variable is numerical and the other is categorical. Run the code below that plots `criminal_history` (a categorical variable) against `age` (a numerical variable).
 
 ```{r criminal history by age, fig.width = 6, fig.height = 6}
-ggplot(us_sent, aes(x = age, 
-                    y = criminal_history)) + 
+ggplot(us_sent, aes(x = criminal_history, 
+                    y = age)) + 
   geom_point(color = 'coral2', 
              alpha = 0.7) +
-  labs(title = "Criminal History by Age",
-       x = "Age (Years)",
-       y = "Criminal History (1-6 levels)") # come back to this
+  labs(title = "Age by Criminal History Level",
+       x = "Criminal History (1-6 levels)",
+       y = "Age (Years)")
 ```
 
-What do you notice in this scatter plot? What do you wonder?
+You might think it's a little difficult to see any clear patters when using a scatterplot to examine one quantitative and one categorical variable because the points are so densely packed together. Another helpful plot for this combination of variables is the side-by-side boxplot. You can create a side-by-side boxplot by simply switching out `geom_point()` with `geom_boxplot()` in the code above:
 
-## What happens when you try to make a scatterplot with two catergoical variables?
+```{r, fig.width = 6, fig.height = 6}
+ggplot(us_sent, aes(x = criminal_history, 
+                    y = age)) + 
+  geom_boxplot(color = 'coral2', 
+             alpha = 0.7) +
+  labs(title = "Age by Criminal History Level",
+       x = "Criminal History (1-6 levels)",
+       y = "Age (Years)") 
+```
 
-Let's try one more scenario. What happens when you try to plot two categorical variables against each other? Run the code below to plot sex against species (both categorical variables).
+What do you notice in this side-by-side boxplot? What do you wonder?
+
+### What happens when you try to make a scatterplot with two catergoical variables?
+
+Let's try one more scenario. What happens when you try to plot two categorical variables against each other? Run the code below to plot sex against race (both categorical variables).
 
 ```{r race by sex, fig.width = 6, fig.height = 6}
-ggplot(us_sent1, aes(x = race,
+ggplot(us_sent, aes(x = race,
                     y = sex)) + 
   geom_point(color = 'coral2', 
              alpha = 0.7) +
@@ -150,7 +188,9 @@ As you may have noted, scatter plots of two categorical variables are not that u
 
 # Explanatory Data Analysis
 <!-- - explain the different columns (linking to the background) -->
-Now, let's return to exploring the variables of interest. Remember, we want to know *who* is in our data set, *what* the sentence was, *when* the individual was sentenced and *where* the sentence occurred. Did you identify how our variables might correspond with each of these questions? You might have classified the variables as follows: 
+Now, let's return to exploring the variables of interest. Remember, we want to know *who* is in our data set, *what* the sentence was, *when* the individual was sentenced and *where* the sentence occurred. Did you identify how our variables might correspond with each of these questions? 
+
+You might have classified the variables as follows: 
 
 <!-- https://www.nature.com/articles/s41599-023-01879-5 -->
 
@@ -169,23 +209,16 @@ Let's start exploring the variables that fall under each of these key questions.
 
 **Sex**
 
-Remember that `sex` has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female". We can confirm this using `distinct()`, a function that displays all unique values under a specified column. 
-
-```{r}
-us_sent %>%
-  distinct(sex)
-```
-
-We can recode this variable using `mutate` and `case_when`, so that we simply see the words "Male" and "Female", rather than the coded numbers. Let's also use `ggplot()` to view the distribution of `sex` within our data set, this time using `geom_bar()` to display the data in a bar graph. Another difference from when we made a scatter plot above using `geom_point()` is that we are adding `fill` to make sure the bars in the bar graph are colored in. We can also add `scale_fill_viridis_d()` to automatically apply a certain color scheme to our plot.
+Let's use `ggplot()` again to view the distribution of `sex` within our data set, this time using `geom_bar()` to display the data in a bar graph. Another difference from when we made a scatter plot above using `geom_point()` is that we are adding `fill` to make sure the bars in the bar graph are colored in. We can also add `scale_fill_viridis_d()` to automatically apply a certain color scheme to our plot.
 
 ```{r sex of sentenced individuals, fig.width = 5, fig.height = 5}
 us_sent %>%
   ggplot() +
   geom_bar(aes(x = sex, fill = sex)) +
-  labs(x = "Sex*",
-       title = "Sex* of Sentenced Individuals",
+  labs(title = "Sex of Sentenced Individuals",
+       x = "Sex",
        y = "Number of Individuals",
-       fill = "Sex*") +
+       fill = "Sex") +
   scale_fill_viridis_d()
 ```
 
@@ -200,18 +233,16 @@ us_sent %>%
   distinct(race)
 ```
 
-We can once again use `ggplot()` to make a bar graph displaying the `race` variable. We can make use of `fct_infreq()` when choosing `race` as our x variable, which makes sure the bars in the plot are ordered by largest to smallest from left to right. 
+We can once again use `ggplot()` to make a bar graph displaying the `race` variable. We can make use of `fct_infreq()` when choosing `race` as our x variable, which makes sure the bars in the plot are ordered largest to smallest from left to right. 
 
 ```{r race of sentenced individuals, fig.width = 5, fig.height = 5}
 us_sent %>%
-  mutate(race = case_when(race == "other" ~ "ari",
-                         TRUE ~ race)) %>%
   ggplot() +
   geom_bar(aes(x = fct_infreq(race), fill = race)) +
-  labs(x = "Race*",
-       title = "Race* of Sentenced Individuals",
+  labs(x = "Race",
+       title = "Race of Sentenced Individuals",
        y = "Number of Individuals",
-       fill = "Race*") +
+       fill = "Race") +
   scale_fill_viridis_d()
 ```
 
@@ -221,8 +252,6 @@ Now let's look at how `race` and `sex` relate to one another. First, let's look 
 
 ```{r}
 us_sent %>%
-  mutate(sex = case_when(sex == 0 ~ "Male",
-                         sex == 1 ~ "Female")) %>% 
   count(race, sex)
 ```
 
@@ -230,16 +259,12 @@ We can represent these two variables using a bar graph. Once again we will use `
 
 ```{r, , fig.width = 5, fig.height = 5}
 us_sent %>%
-  mutate(race = case_when(race == "other" ~ "ari",
-                         TRUE ~ race)) %>%
-  mutate(sex = case_when(sex == 0 ~ "Male",
-                         sex == 1 ~ "Female")) %>%
   ggplot() +
   geom_bar(aes(x = fct_infreq(race), fill = sex)) +
-  labs(x = "Race*",
-       title = "Race* and Sex* of Sentenced Individuals",
+  labs(x = "Race",
+       title = "Race and Sex of Sentenced Individuals",
        y = "Number of Individuals",
-       fill = "Sex*")  +
+       fill = "Sex")  +
   scale_fill_viridis_d()
 ```
 
@@ -247,16 +272,12 @@ We can also create a proportional bar plot. All we need to add to our previous `
 
 ```{r, fig.width = 5, fig.height = 5}
 us_sent %>%
-  mutate(race = case_when(race == "other" ~ "ari",
-                         TRUE ~ race)) %>%
-  mutate(sex = case_when(sex == 0 ~ "Male",
-                         sex == 1 ~ "Female")) %>%
   ggplot() +
   geom_bar(aes(x = fct_infreq(race), fill = sex), position = "fill") +
-  labs(x = "Race*",
-       title = "Race* and Sex* of Sentenced Individuals",
+  labs(x = "Race",
+       title = "Race and Sex of Sentenced Individuals",
        y = "Number of Individuals",
-       fill = "Sex*")  +
+       fill = "Sex")  +
   scale_fill_viridis_d()
 ```
 
@@ -274,11 +295,12 @@ us_sent %>%
        y = "Count")
 ```
 
+What do you notice about the ages represented in our data? Can you try plotting the ages for other districts to see how they differ from the three we've chosen for this plot?
 
+<!--
 **To add**:
 - what do we divide by?
 - You may look at this plot and say that whites are sentenced at the federal district court more than black individuals. This is where it is important to look at the population in each district.
-
 
 **Future Directions**
 
@@ -288,7 +310,7 @@ Bringing in the spatial district files
 - Downloading census data from the API.
 - Joining to census data
 - Limitations of census data
-- Other potential things to mention (the affect of aggregation and spatial scale).
+- Other potential things to mention (the affect of aggregation and spatial scale). -->
 
 
 ## What
@@ -299,102 +321,148 @@ Now that we explored the "Who?" question about our data, let's move on to answer
 
 > How do sentence lengths relate to policy? <!--- insert blurb here? -->
 
-To better understand `sentence_length`, we’ll display a histogram for this quantitative variable. A histogram gives us a visual representation of the frequency of values. With R, we can change the width of each bin or choose a number of bins, and then the plot shows us how many sentences fell within each bin range.
+To better understand `sentence_length`, we’ll display a histogram for this quantitative variable. A histogram gives us a visual representation of the frequency of values. With R, we can change the width of each bin or choose a number of bins, and then the plot shows us how many sentences fell within each bin range. We can also use `geom_vline()` to add some red lines on the graph as a guide to think about common sentence lengths of 12, 60, 120, or 240 months. 
 
 ##### Histogram
 
 ```{r, fig.width = 6, fig.height = 5}
 ggplot(us_sent) +
-  geom_histogram(aes(x = sentence_length), binwidth = 12) +
-  labs(x = "Sentence length in months", y = "Number of individuals")  +
-  geom_vline(aes(xintercept = 12), color = "red", linetype = 2) +
-  geom_vline(aes(xintercept = 60), color = "red", linetype = 2) +
-  geom_vline(aes(xintercept = 120), color = "red", linetype = 2) +
-  geom_vline(aes(xintercept = 240), color = "red", linetype = 2)
+  geom_histogram(aes(x = sentence_length), 
+                 binwidth = 12) +
+  geom_vline(aes(xintercept = 12), 
+             color = "red", 
+             linetype = 2) +
+  geom_vline(aes(xintercept = 60), 
+             color = "red", 
+             linetype = 2) +
+  geom_vline(aes(xintercept = 120), 
+             color = "red", 
+             linetype = 2) +
+  geom_vline(aes(xintercept = 240), 
+             color = "red", 
+             linetype = 2) +
+  labs(x = "Sentence Length (Months)", 
+       y = "Number of Individuals",
+       title = "Numbers of Individuals per Sentence Length")
 ```
 
-##### Histogram
+What do you notice about the number of individuals per sentence length in our data set?
+
+While it may be useful to look at how sentence length in terms of months, we can also adjust the scale of our historgram to look at sentence length in terms of years. We can do so by simply dividing our x variable, `sentence_length` by 12. We can also adjust our guiding red lines to examine the sentence lengths between 1, 5, 10, and 20 years:
 
 ```{r, fig.width = 6, fig.height = 5}
 ggplot(us_sent) +
-  geom_histogram(aes(x = sentence_length/12), binwidth = 1) +
-  labs(x = "Sentence length in years", y = "Number of individuals") +
-  geom_vline(aes(xintercept = 1), color = "red", linetype = 2) +
-  geom_vline(aes(xintercept = 5), color = "red", linetype = 2) +
-  geom_vline(aes(xintercept = 10), color = "red", linetype = 2) +
-  geom_vline(aes(xintercept = 20), color = "red", linetype = 2) +
-  labs(title = "Distribution of number of individuals by ")
-
-
-
+  geom_histogram(aes(x = sentence_length/12), 
+                 binwidth = 1) +
+  labs(x = "Sentence length in years", 
+       y = "Number of individuals") +
+  geom_vline(aes(xintercept = 1), 
+             color = "red", 
+             linetype = 2) +
+  geom_vline(aes(xintercept = 5), 
+             color = "red", 
+             linetype = 2) +
+  geom_vline(aes(xintercept = 10), 
+             color = "red", 
+             linetype = 2) +
+  geom_vline(aes(xintercept = 20), 
+             color = "red", 
+             linetype = 2) +
+  labs(title = "Distribution of Number of Individuals by Sentence Length in Years",
+       x = "Sentence Length (Years)", 
+       y = "Number of Individuals")
 ```
 
 We observe a high frequency over 0, meaning that many individuals who are convicted may in fact receive a sentence of 0 months. At the other extreme, we see cases corresponding to 470 months, representing individuals who either have been given a long sentence, meaning 39 years or possibly a life sentence.
 
-[could further discuss skew, peaks and relate to sentencing table, etc.]
+<!-- [could further discuss skew, peaks and relate to sentencing table, etc.] -->
 
 ##### Violin Plot
 
-Violin plots are another way of showing the distribution data.
+Violin plots are another useful way of showing the distribution data. Let's use a violin plot to compare `criminal_history` and `sentence_length`. We can make use of the `geom_violin()` function to accomplish this:
 
 ```{r, fig.width = 6, fig.height = 5}
 ggplot(us_sent) +
-  geom_violin(aes(x = as.factor(criminal_history), 
+  geom_violin(aes(x = criminal_history, 
                   y = sentence_length, 
-                  fill = as.factor(criminal_history))) +
+                  fill = criminal_history)) +
   labs(fill = "Criminal History", 
-       y = "Sentence length in months", 
-       x = "Criminal History")
+       y = "Sentence Length (Months)", 
+       x = "Criminal History",
+       title = "Sentence Length by Criminal History")
 
 ```
 
 ##### Ridge plot
 
+Apart from historgrams and violin plots, ridge plots are another useful way to represent data. We can use similar code as for the violin plots but make use of `geom_density_ridges()`. We can also continue to add some guiding lines to our plots at 12, 60, 120, 180, and 240 months:
+
 ```{r, fig.width = 6, fig.height = 5}
 ggplot(us_sent) +
-  geom_density_ridges(aes(y = as.factor(criminal_history),
+  geom_density_ridges(aes(y = criminal_history,
                           x = sentence_length,
-                          fill = as.factor(criminal_history))) +
+                          fill = criminal_history)) +
+  geom_vline(aes(xintercept = 12), 
+             color = "black", 
+             linetype = 2) +
+  geom_vline(aes(xintercept = 60), 
+             color = "black", 
+             linetype = 2) +
+  geom_vline(aes(xintercept = 120), 
+             color = "black", 
+             linetype = 2) +
+  geom_vline(aes(xintercept = 180), 
+             color = "black", 
+             linetype = 2) +
+  geom_vline(aes(xintercept = 240), 
+             color = "black", 
+             linetype = 2) +
   labs(title = "Distribution of sentence length in months by criminal history",
        subtitle = "Black dashed lines indicate 1, 5, 10, 15, and 20 year sentences",
        fill = "Criminal History",
        x = "Sentence length in months",
        y = "Criminal History") +
-  geom_vline(aes(xintercept = 12), color = "black", linetype = 2) +
-  geom_vline(aes(xintercept = 60), color = "black", linetype = 2) +
-  geom_vline(aes(xintercept = 120), color = "black", linetype = 2) +
-  geom_vline(aes(xintercept = 180), color = "black", linetype = 2) +
-  geom_vline(aes(xintercept = 240), color = "black", linetype = 2) +
   scale_fill_viridis_d()
 
 ```
 
-#### What is the relationship between `all_adjustments` and `sentence_length`?
+#### What is the relationship between `all_adjustments`, `sentence_length`, and `criminal_history`?
+
+Now that we understand some useful plots for examining our data. Let's return to using scatterplots to examine three important variables related to the "What?" question: `all_adjustments`, `sentence_length`, `criminal_history`. We can look at these three variables at once by comparing `all_adjustments` and `sentence_length` in a conventional way with scatterplots, but adding in `criminal_history` through color. 
+
+```{r, fig.width = 6, fig.height = 5}
+ggplot(us_sent) +
+  geom_point(aes(y = sentence_length,
+                 x = all_adjustments, 
+                 color = criminal_history),
+             alpha = 0.3) +
+  labs(x = "All Adjustments",
+       y = "Sentence Length (in months)",
+       title = "Sentence Length by All Adjustments and Criminal History Level",
+       color = "Criminal History") +
+  scale_color_viridis_d()
+```
+
+Now we can display a lot of information in a single plot! However, let's try going a step further, and adding the `race` variable into the mix. We can do so by using the same code as for the previous plot, but also using the `facet_wrap()` function with `race` to create four different plots according to `race`.
 
 ```{r, fig.width = 7, fig.height = 6}
 ggplot(us_sent) +
   geom_point(aes(y = sentence_length,
-                 x = all_adjustments, color = as.factor(criminal_history)), alpha = 0.01) +
+                 x = all_adjustments, 
+                 color = criminal_history), 
+             alpha = 0.3) +
   labs(x = "All Adjustments",
-       y = "Sentence length in months",
+       y = "Sentence length (Months)",
        color = "Criminal History") +
   facet_wrap(~ race) +
   scale_color_viridis_d()
 ```
 
-```{r, fig.width = 6, fig.height = 5}
-ggplot(us_sent) +
-  geom_point(aes(y = sentence_length,
-                 x = all_adjustments, color = as.factor(criminal_history)), alpha = 0.01) +
-  labs(x = "All Adjustments",
-       y = "Sentence length in months",
-       color = "Criminal History") +
-  scale_color_viridis_d()
-```
+Now we have four different variables represented in a single plot, which is a super powerful tool. What do you notice about the plots above? 
 
-#### How does the age range vary with criminal history?
+<!-- #### How does the age range vary with criminal history? -->
 
-```{r, , fig.width = 6, fig.height = 5}
+```{r, , fig.width = 6, fig.height = 5, eval = FALSE, include = FALSE}
 ggplot(us_sent) +
   geom_density_ridges(aes(y = as.factor(criminal_history),
                           x = age,
@@ -406,10 +474,7 @@ ggplot(us_sent) +
 
 ## When
 
-Let's explore the time data found in our US sentencing data set. How many columns of data did we have again? This seems like a good place to start digging into what kind of time data we have in this data set. Which tool can we use to find out?
-
-
-Do we remember?
+Let's turn to the final question we are asking about our dataset, which is encompassed in the "When?" question. Specifically, let's explore the time data found in our US sentencing data set. How many columns of data did we have again? Which tool can we use to find out? Do we remember?
 
 
 We do remember: we can use the `names()` routine to remind ourselves.
@@ -428,7 +493,7 @@ us_sent %>%
 
 Excellent. So we know we have years from 2006 to 2020 in our data, or 15 rows worth of data.  It is worth noticing that although 2020-2006 = 14, when we count each year as a whole year of data *inclusively*, we have 15 distinct instances, which the distinct command helpfully listed out for us.
 
-Now, each of these data points is a numeric variable, such as '2010', or '2015'. One way we could check is to use the `sapply()` routine again.
+<!--Now, each of these data points is a numeric variable, such as '2010', or '2015'. One way we could check is to use the `sapply()` routine again.
 
 ```{r}
 sapply(us_sent, is.numeric)
@@ -441,29 +506,31 @@ In the output we can indeed see `TRUE` for the column `year`. As we progress in 
 sapply(us_sent, is.double)
 ```
 
-Nice, we can see that our `year` data is indeed a double precision floating point number.
+Nice, we can see that our `year` data is indeed a double precision floating point number.-->
 
 Let's do a graph of our `year` data, where we have each year on the vertical y axis and the sentences on the horizontal x axis.  
 
 ```{r Bar chart of year data, fig.width = 6, fig.height = 5}
 ggplot(us_sent) +
-  geom_bar(aes(y = year)) +
+  geom_bar(aes(y = year),
+           fill = "blue") +
   labs(title = "Observations by Year",
        x = "Count",
        y = "Year")
 ```
 
 
-If we wanted to use a scatter plot, which could be a bit 'messier', one way to do so would be to use `geom_point()` again:
+Let's explore how `sentence_length` varies by each year in our data set. We can do this by using side-by-side boxplots again. 
 
 ```{r graph our year data- scatter plot, fig.width = 6, fig.height = 5}
-ggplot(us_sent, aes(x = sentence_length, 
-                    y = year)) + 
-  geom_point() +
-  labs(title = "Observations by Year",
-       x = "Count",
+ggplot(us_sent, aes(x = year, 
+                    y = sentence_length)) + 
+  geom_boxplot() +
+  labs(title = "Sentence Length by Year",
+       x = "Sentence Length",
        y = "Year")
 ```
+<!-- could include more information on interpreting boxplots, explaining what outliers are, etc. would likely write about this above where we first introduce boxplots. We could also consider adding in information about examining center, spread, etc. -->
 
 ## Where
 
@@ -480,53 +547,76 @@ If you live in the United States, do you know which district you live in?
 
 If not, you can look it up at [the United States Department of Justice's website](https://www.justice.gov/ust/locate-your-judicial-district).
 
-Apart from using `distinct` to figure out what districts we have in our data set,  we are also interested in finding out how many sentences were made in each district. We also will want to think about this question in relation to the population of those districts, which can be quite nuanced and we will come back to this later.
+Apart from using the `distinct` variable to figure out what districts we have in our data set,  we are also interested in finding out how many sentences were made in each district. We also will want to think about this question in relation to the population of those districts, which can be quite nuanced and we will come back to this later.
 
 Our goals in this next section are to think about ways we can explore the question "Where did those sentences occur?" in a visual way.
 
-**Learning aims**
+<!--**Learning aims**
 
-- introduce factors as a data type
+- introduce factors as a data type (accomplished above)
 - explain why it might be better to put our names on the y axis instead of the x-axis for many categories and those with longer names. This makes it more readable.
 - explain that automatically categorical data will be placed in alphabetical order.
 - we can reconfigure the graph using functions from the `forcats` package.
 - This is a good example for when you might want to order it in terms of frequency (i.e. the count) using `fct_infreq`
-- We may also want to reverse the order to see the districts which have the most sentences at the top of our plot using `fct_rev`.
+- We may also want to reverse the order to see the districts which have the most sentences at the top of our plot using `fct_rev`. -->
 
 #### Number of individuals sentences across districts {.tabset}
 
+Let's start looking at the number of individual sentences across districtsby using a bar plot. 
 
 ##### Base Bar Plot
 
-```{r}
+```{r, fig.width = 6, fig.height = 5}
 ggplot(us_sent) +
   geom_bar(aes(x = district))
 ```
 
+We can see immediately that, given the large number of districts, a simple bar graph makes it super hard to interpret the data. Let's go through some ways we can improve this plot. 
+
 ##### District on the y-axis
 
-```{r}
+First, we can change our plot so that `district` is on the y-axis so there is more room for the text, and let's not worry about presenting accurate axis labels or titles until we get our plot into a readable format: 
+
+```{r, fig.width = 5, fig.height = 9}
 ggplot(us_sent) +
   geom_bar(aes(y = district))
 ```
 
-##### Ordered by number of sentences
+That definitely makes it easier to read the district names! However, we can think about ordering the districts in such a way that is useful for us. For example, we might be interested in seeing the districts with the most amount of sentences.
 
-```{r}
+##### Ordered by number of sentences
+To answer this question, we can use `fct_infreq()`, as we did earlier in our EDA, to order the districts from the least to the most number of sentences. 
+
+```{r, fig.width = 5, fig.height = 9}
 ggplot(us_sent) +
   geom_bar(aes(y = fct_infreq(district)))
 ```
 
 ##### Ordering from high to low
 
-```{r}
+Alternatively, we can order the districts from the most to the least amount of sentences in our data set by using `fct_rev()` in conjunction with `fct_infreq()`.
+
+```{r, fig.width = 5, fig.height = 9}
 ggplot(us_sent) +
   geom_bar(aes(y = fct_rev(fct_infreq(district))))
 ```
 
 ##### Add title and axes labels
 
-```{r}
+Now that we have our plot data organized in a readable and useful way, let's add useful title and axis titles. When we have longer titles, you can use $\n$ to add a line break. 
+
+```{r, fig.width = 5, fig.height = 9}
+ggplot(us_sent) +
+  geom_bar(aes(y = fct_rev(fct_infreq(district))),
+           fill = "forestgreen") +
+  labs(title = "Number of Individuals Sentenced at \nthe Federal District Court Level",
+       y = "Federal District Court",
+       x = "Number of individuals")
+```
+
+<!--##### Making the plot more readable with subsetting -->
+
+```{r, include = FALSE, eval = FALSE}
 ggplot(us_sent) +
   geom_bar(aes(y = fct_rev(fct_infreq(district)))) +
   labs(title = "Number of individuals sentenced at the federal district court level for each district from x to x",
@@ -534,15 +624,6 @@ ggplot(us_sent) +
        x = "Number of individuals")
 ```
 
-##### Making the plot more readable with subsetting
-
-```{r}
-ggplot(us_sent) +
-  geom_bar(aes(y = fct_rev(fct_infreq(district)))) +
-  labs(title = "Number of individuals sentenced at the federal district court level for each district from x to x",
-       y = "Federal District Court",
-       x = "Number of individuals")
-```
 ```{r}
 ggplot(us_sent) +
   geom_bar(aes(y = fct_infreq(district))) +
@@ -551,21 +632,21 @@ ggplot(us_sent) +
        x = "Number of individuals")
 ```
 
-##### Exploring the census data
+<!--##### Exploring the census data
 
 **To Do**:
 
 - If we want to get out the district populations, we will probably need to download the data by the county level.
-- Decision points: we could download the data in categories by age and sex and race: e.g. 5-9, 10-14 etc. This might get a little
+- Decision points: we could download the data in categories by age and sex and race: e.g. 5-9, 10-14 etc. This might get a little -->
 
-```{r census-data-import, echo = TRUE, warning = FALSE, message = FALSE, results = 'hide'}
+```{r census-data-import, echo = TRUE, warning = FALSE, message = FALSE, results = 'hide', include = FALSE, eval = FALSE}
 
 # apply unique census api key
 census_api_key("5177724b01a7fe4714097e711cb95230c37cfce7", overwrite = TRUE)
 
 # import census data
 ## guide to spatial units: https://api.census.gov/data/2016/acs/acs5/geography.html
-## variable of interest --> population
+## variable of interest -> population
 ## vars <- load_variables(year = 2013,
                       # data set = "acs5",
                       # cache = TRUE)
