--- a/background.Rmd
+++ b/background.Rmd
@@ -66,29 +66,30 @@ The data come from two sources: the pre-sentencing report and the Statement of R
 
 The two main variables used in the non-mandatory guidelines for sentencing are criminal history (`criminal_history`) and an indicator of the severity of the crime (`all_adjustments`). The two variables are combined, using a table, to determine the recommended range of the sentence.
 
-The variable `criminal_history` is coded as a value 1--6, with 1 including a defendant with at most one conviction, where that conviction resulted in a sentence of less than 60 days.  Prior convictions are assigned "points," depending on the number of prior convictions, length(s) of sentence(s), and whether or not past crimes involved violence.  The points are then summed and translated into a "criminal history category," represented by the `criminal_history` values 1 through 6.  As an additional example, a defendant who has three prior convictions with sentences of over 13 months and two with sentences between 2 and 13 months would be assigned a total of 13 points, yielding the criminal history category 6. With only one prior conviction of each type, the category would be 3. The calculation is not quite this simple, with many adjustments and some types of convictions and very old convictions being ignored.
+The variable `criminal_history` is coded as a value 1--6. Prior convictions are assigned "points," depending on the number of prior convictions, length(s) of sentence(s), and whether or not past crimes involved violence. The points are then summed and translated into a "criminal history category," represented by the `criminal_history` values 1 through 6. A value of 1, for example, would refer to a defendant with at most one conviction, where that conviction resulted in a sentence of less than 60 days. As an additional example, a defendant who has three prior convictions with sentences of over 13 months and two with sentences between 2 and 13 months would be assigned a total of 13 points, yielding the criminal history category 6. With only one prior conviction of each type, the category would be 3. The calculation is not quite this simple, with many adjustments and some types of convictions and very old convictions being ignored.
 
-The variable `all_adjustments` is a rating of the offense level (how severe the crime is) with adjustments (added considerations that call for higher or lower offense level), as defined by the US Sentencing Commission's Sentencing Guidelines Manual and interpreted by the US Probation Office and/or the Presiding Judge. There are 43 levels where, for example, first degree murder has a base level (that is, level prior to adjustments) of 43 and trespassing has a base level of 4. Two additional variables, `base_chapter2_adjustments` and `base_chapter2_3_adjustments`, have to do with the derivation of `all_adjustments`, but you can ignore these for the purposes of this case study.
+The variable `all_adjustments` is a rating of the offense level (how severe the crime is) with adjustments (added considerations that call for higher or lower offense level), as defined by the US Sentencing Commission's Sentencing Guidelines Manual and interpreted by the US Probation Office and/or the Presiding Judge. There are 43 levels where, for example, first degree murder has a base level (that is, level prior to adjustments) of 43 and trespassing has a base level of 4. Two additional variables, `base_chapter2_adjustments` and `base_chapter2_3_adjustments`, have to do with the derivation of `all_adjustments`, but you can ignore these variables for the purposes of this case study.
 
-Apart from `criminal_history` and `all_adjustments`, there are several variables related to identity of defendants: 
+Apart from `criminal_history` and `all_adjustments`, there are several variables related to the identity of defendants: 
 
 * `age`, which refers to a defendant's age in years.
 * `sex`, which has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female". 
 * `educ`, which refers to a defendant's educational attainment which consists of 4 levels (1 refers to a defendant having less than high school graduation, 3 refers to a high school graduate, 5 means having some college, and 6 means college graduate), and 
 * `race`, which refers to a defendant's race and has levels "black", "hispanic", "white" and "other".
 
-A key motivation for this work is exploring how our personal and racial identities influence the judicial sentencing. In a fair, democratic system this identity or perceived identity should not affect how we are treated by the justice system. It is important to note that these characteristics are not independent of one another but can intersect and interact with one another. This combined effect is known as intersectionality. The Center for Intersectional Justice describes the concept of intersectionality as: "the ways in which systems of inequality based on gender, race, ethnicity, sexual orientation, gender identity, disability, class and other forms of discrimination 'intersect' to create unique dynamics and effects" (Ref: [Center for Intersectional Justice](https://www.intersectionaljustice.org/what-is-intersectionality), July 20, 2023). `sex` has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female".
+A key motivation for this work is exploring how our personal and racial identities influence the judicial sentencing. In a fair, democratic system this identity or perceived identity should not affect how we are treated by the justice system. It is important to note that these characteristics are not independent of one another but can intersect and interact with one another. This combined effect is known as intersectionality. The Center for Intersectional Justice describes the concept of intersectionality as: "the ways in which systems of inequality based on gender, race, ethnicity, sexual orientation, gender identity, disability, class and other forms of discrimination 'intersect' to create unique dynamics and effects" (Ref: [Center for Intersectional Justice](https://www.intersectionaljustice.org/what-is-intersectionality), July 20, 2023). 
 
-<!-- **To add**
+Let's take a moment to also consider how these identity-based variables were defined. `sex`, for example, is defined in a pre-sentencing report that comes out of the investigation done by the probation office. This goes to the attorneys and also comes out of an interview with the individual. It should be noted that there are only two categories, so it is likely that there might be only two options possible for the individual. Not only is this challenging in that it restricts a defendant's identity to two rigid categories, but a binary variable will not reflect sentenced individuals' gender identity and excludes several groups, such as non-binary individuals, altogether. Therefore, a limitation of this study comes through in the "levels" of each variable being predetermined by the data-collecting institutions we are relying on. It is critical that in such instances we not only acknowledge this limitation, but contextualize our analysis and inferences with this knowledge. 
 
-- Add how sex was defined (sex is defined in pre-sentencing report that comes out of the investigation done by the probation office. This goes to the attorneys and also comes out of an interview with the individual. It should be noted that there are only two categories, so it is likely that there might be only two options possible). See Background section or link to official report for more information.
+<!-- Attempted to write this section above, but could clarify/add based on these notes:
+- See Background section or link to official report for more information
 - Discuss how a binary variable will not reflect sentenced individuals gender identity and excludes several groups. It is also limiting in nature.
 - Discuss difference between sex and gender
 - Discuss who has defined this variable and why this is problematic
 - Discuss the limitations and how this affects the analysis and inferences we can make.
 - Update sex label with more appropriate label based on Background research. 
 
-Also to add: explaining why we are going to use "ARI" rather than "other" for the race category -->
+Also to possibly add: explaining why we are going to use "ARI" rather than "other" for the race category -->
 
 The nine other variables in the dataset refer to information about the court cases themselves: 
 
